fix(app component / app-layout): fix sidebar overlap tablet dimensions

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -46,7 +46,7 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
   }
 
-  .rlb-sidebar {
+  body.sidebar-enable .rlb-sidebar {
     z-index: 1040;
   }
 }
